--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,8 +21,7 @@ steps:
     entrypoint: 'gcloud'
     args:
       - 'run'
-      - 'services'
-      - 'update'
+      - 'deploy'
       - '$_SERVICE_NAME'
       - '--platform=managed'
       - '--image=$_AR_HOSTNAME/$_AR_PROJECT_ID/$_AR_REPOSITORY/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
