add: yml for vertex ai

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -39,8 +39,15 @@ steps:
       - '300s'
       - '--max-instances'
       - '10'
-      # Cloud Buildのトリガーで設定した代入変数を、Cloud Runの環境変数として設定します
-      - '--update-env-vars=GOOGLE_GENAI_USE_VERTEXAI=$_GOOGLE_GENAI_USE_VERTEXAI,GOOGLE_API_KEY=$_GOOGLE_API_KEY,LINE_CHANNEL_ACCESS_TOKEN=$_LINE_CHANNEL_ACCESS_TOKEN,LINE_CHANNEL_SECRET=$_LINE_CHANNEL_SECRET'
+
+      # 【現在有効】Vertex AI を使う場合 (`true`)
+      # GOOGLE_CLOUD_PROJECT と GOOGLE_CLOUD_LOCATION を設定します。
+      - '--update-env-vars=GOOGLE_GENAI_USE_VERTEXAI=true,GOOGLE_API_KEY=$_GOOGLE_API_KEY,GOOGLE_CLOUD_PROJECT=$PROJECT_ID,GOOGLE_CLOUD_LOCATION=$LOCATION,LINE_CHANNEL_ACCESS_TOKEN=$_LINE_CHANNEL_ACCESS_TOKEN,LINE_CHANNEL_SECRET=$_LINE_CHANNEL_SECRET'
+
+      # 【無効】Google AI Studio を使う場合 (`false`)
+      # GOOGLE_CLOUD_PROJECT と GOOGLE_CLOUD_LOCATION は不要なので含めません。
+      # - '--update-env-vars=GOOGLE_GENAI_USE_VERTEXAI=false,GOOGLE_API_KEY=$_GOOGLE_API_KEY,LINE_CHANNEL_ACCESS_TOKEN=$_LINE_CHANNEL_ACCESS_TOKEN,LINE_CHANNEL_SECRET=$_LINE_CHANNEL_SECRET'
+
 
 # ビルドとデプロイに使用するイメージを明記
 images:
